feat(device) detect new brand Tone models: e19, m15 feat(device) detect brand Coolpad model: Legacy (cp3705AS) feat(device) detect brand Alcatel model: 3X (2019) (5048Y_EEA) feat(device) detect brand Wiko model: Life 2 (U307AS) feat(device) detect brand ZTE model: Blade Q+ (402ZT) feat(device) detect brand Sharp model: Aquos S3 (SH-02M) feat(device) detect brand Kyocera models: Gratina 4G (KYF31), Urbano V01 (KYV31)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -1028,7 +1028,7 @@ Arian Space:
 
 # Alcatel
 Alcatel:
-  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|4114E|5001[ADJTU](?:_EEA|_RU)?|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJ](?:_RU)?|5025[DEG]|5026[ADJ]|5027B|5028A|5032W|5033[AX]|5033[DJ](?:[ _]RU)?|5034D(_RU)?|5038[ADEX]|5041C|5042[ADEFGWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048A|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[AD](_RU)?|5053A|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY](_RU)?|5059[ADXYZ](_RU)?|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI](_RU)?|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOY]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7055A|7070X|8030Y|8050[DEGX]|8063|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9022X|9027[FTWX]|9203A|A570BL|I213|I216X|A50[13]DL|A574BL|A57[17]VL|A464BG|5028Y[_ ]EEA)[);/ ]|TIMXL'
+  regex: 'Alcatel|Alc(?!or )[a-z0-9]+|One[ _]?Touch|idol3|(?:4003[AJ]|4009[ADEFIKMSX]|4013[DEJKMX]|4014[ADEKMX]|4015[ADNTX]|4016[ADX]|4017[ADEFSX]|4018[ADEFMX]|4024[EDX]|4027[ADNX]|4028[AEJS]|4032[ADEX]|4034[ADEFGX]|4035[ADXY]|4045[ADEX]|4047[ADFGNX]|4049[DEGMX]|4060[SW]|A466BG|4114E|5001[ADJTU](?:_EEA|_RU)?|5009[AD]|5010[DEGSUX]|5011A|5012[DFG]|5015[ADEX]|5016[AXJ]|5017[ABDEOX]|5019D|5022[EDX]|5023[EF]|5024[ADJ](?:_RU)?|5025[DEG]|5026[ADJ]|5027B|5028A|5032W|5033[AX]|5033[DJ](?:[ _]RU)?|5034D(_RU)?|5038[ADEX]|5041C|5042[ADEFGWX]|5044[ADGIKOPSTY]|5045[ADFGIJTXY]|5046[ADGIJSTUY]|5047[DIUY]|5048A|5049[EGSWZ]|5050[ASXY]|5051[ADEJMTWX]|5052[AD](_RU)?|5053A|5054[ADNSTWX]|5056[ADEGIJMNTUWX]|5057M|5058[AIY](_RU)?|5059[ADXYZ](_RU)?|5065[ADNWX]|5070D|5080[ADFQUX]|5085[ABCDGHIJNOQY]|5086[ADY]|5090[AIY]|5095[IKY]|5098[OS]|5099[ADYUI](_RU)?|5116J|5145A|6016[ADEX]|6036[AXY]|6037[BKY]|6039[AHJKY]|6043[AD]|6044D|6045[BFIKOY]|6050[AFY]|6055[ABDHIKPUYZ]|6058[ADX]|6060S|6062W|6070K|7040[ADEFKRT]|7041[DX]|7043[AEKY]|7044[AX]|7045Y|7048[ASWX]|7055A|7070X|8030Y|8050[DEGX]|8063|9001[DIX]|9002X|9003[AX]|9024O|9005X|9026X|9007[ATX]|9008[ADIJNTUX]|9010X|9022X|9027[FTWX]|9203A|A570BL|I213|I216X|A50[13]DL|A574BL|A57[17]VL|A464BG|5028Y[_ ]EEA|5048Y[_ ]EEA)[);/ ]|TIMXL'
   device: 'smartphone'
   models:
     - regex: '(?:5022[EDX]|5070D)[);/ ]'
@@ -1227,7 +1227,7 @@ Alcatel:
       model: 'A30 Fierce'
     - regex: '5085[GO]'
       model: 'A50'
-    - regex: '5048A'
+    - regex: '5048(?:Y_EEA|A)[);/ ]'
       model: '3X (2019)'
     - regex: '5049W[);/ ]'
       model: 'Revvl'
@@ -3365,7 +3365,7 @@ Condor:
 
 # Coolpad
 Coolpad:
-  regex: '(?:YL-)?Coolpad|(?:8190Q|8676-A01|CP8298_I00|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C106-7|MTS-T0|cp3705A|ORL-C0)[);/ ]|(8295|5860S) Build'
+  regex: '(?:YL-)?Coolpad|(?:8190Q|8676-A01|CP8298_I00|CP8676_I0[23]|REVVLPLUS C3701A|VCR-[AI]0|C106-7|MTS-T0|cp3705A[S]?|ORL-C0)[);/ ]|(8295|5860S) Build'
   device: 'smartphone'
   models:
     - regex: 'VCR-[AI]0'
@@ -3375,7 +3375,7 @@ Coolpad:
       device: 'phablet'
     - regex: '8190Q[);/ ]'
       model: '8190Q'
-    - regex: 'CP3705A[);/ ]'
+    - regex: 'CP3705A[S]?[);/ ]'
       model: 'Legacy'
     - regex: 'MTS-T0[);/ ]'
       model: 'N2M'
@@ -6889,7 +6889,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[3-5]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[125]|KYV47-u|X3-KC)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-5]|KYF31|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[125]|KYV47-u|X3-KC)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -6929,6 +6929,8 @@ Kyocera:
       model: 'Miraie'
     - regex: 'KYY24[;/) ]'
       model: 'Torque G01'
+    - regex: 'KYF31[;/) ]'
+      model: 'Gratina 4G'
     - regex: 'KYV35[;/) ]'
       model: 'Torque G02'
     - regex: 'KYV41[;/) ]'
@@ -6947,6 +6949,8 @@ Kyocera:
       model: 'Urbano L02'
     - regex: 'KYY23[;/) ]'
       model: 'Urbano L03'
+    - regex: 'KYV31[;/) ]'
+      model: 'Urbano V01'
     - regex: 'KYV34[;/) ]'
       model: 'Urbano V02'
     - regex: 'KYV45[;/) ]'
@@ -11518,7 +11522,7 @@ Sharp:
       model: 'Aquos S3 Plus'
     - regex: '(?:SHV44|808SH)[);/ ]'
       model: 'Aquos R3'
-    - regex: 'FS8032[);/ ]'
+    - regex: '(?:FS8032|SH-02M)[);/ ]'
       model: 'Aquos S3'
     - regex: 'FS8018[);/ ]'
       model: 'Aquos S3 Mini'
@@ -12669,7 +12673,7 @@ Wexler:
 
 # Wiko
 Wiko:
-  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P200)|WC300|W-(V720|V800|P[36]11|K420|K510)-(TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-U300'
+  regex: '(?:WIKO[_ -])|(?:WIKO-)?CINK_[a-z0-9_]+|(?:WIKO-)?HIGHWAY_[a-z0-9_]+|(?:WIKO-)?(?:Cink([^/;]*)|Highway([^/;]*)|Iggy|Stairway|Rainbow ?(Jam|Lite|Up)?|Darkside|Darkmoon|Darkfull|Darknight|Freddy|FEVER|Jerry[2]?|Sublim|Ozzy|JIMMY|Barry|Birdy|Bloom|Getaway|Goa(?!nna)|Kite|Robby|Lenny[2-9]?|Slide|Sunset[2-9]?|Sunny[2-9]?|Tommy[2-9]?|PULP(?: Fab)?|Wax|HARRY|Ridge(?: Fab)?|U FEEL(?: Prime| Lite)?|U PULSE(?: LITE)?|View2 Go|View XL|View Prime)(?: Plus)?(?: 4G)?(?: Build|$)?|W_(?:C800|K[346]00|P200)|WC300|W-(V720|V800|P[36]11|K420|K510)-(TVM|EEA|SUN|OPE)|WIM Lite|W-K360-TV|W-U300|U307AS'
   device: 'smartphone'
   models:
     - regex: '(?:Wiko-)?Cink([^/;]*) Build'
@@ -12734,6 +12738,8 @@ Wiko:
       model: 'Kite'
     - regex: 'W_K400'
       model: 'Lenny 5'
+    - regex: 'U307AS[;/) ]'
+      model: 'Life 2'
     - regex: '(?:WIKO-)?Lenny[ -_]?3 Max'
       model: 'Lenny 3 Max'
     - regex: '(?:WIKO-)?Lenny[ -_]?4 Plus'
@@ -13808,7 +13814,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A5 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J|402ZT)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -13848,6 +13854,8 @@ ZTE:
       model: 'Blade Force'
     - regex: 'Z559DL[);/ ]'
       model: 'Blade T2'
+    - regex: '402ZT[);/ ]'
+      model: 'Blade Q+'
     - regex: 'N9515[);/ ]'
       model: 'Warp Sync'
     - regex: 'N9519[);/ ]'
@@ -15266,5 +15274,11 @@ TD Systems:
 # Ravoz
 Ravoz:
   regex: 'RAVOZ[ _](Z[347])[);/ ]'
+  device: 'smartphone'
+  model: '$1'
+
+# Tone Mobile
+Tone:
+  regex: 'TONE (e19|m15)[);/ ]'
   device: 'smartphone'
   model: '$1'
