--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -5079,3 +5079,244 @@
     model: Urbano V01
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 9; SC-02M Build/PPR1.180610.011)
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY A20
+  os_family: Android
+  browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SC-02K Build/QP1A.190711.020; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/81.0.4044.138 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY S9
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SC-01G) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/11.1 Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 6.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "11.1"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: phablet
+    brand: SA
+    model: GALAXY Note Edge
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SC-52A) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY S20+ 5G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SC-04L) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.101 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY S10+
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SC-01L) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: SA
+    model: GALAXY Note 9
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SC-03L) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY S10
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; SC-03J) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.101 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY S8+
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; SC-03K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY S9+
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; SC-01K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: SA
+    model: GALAXY Note 8
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; KYV44) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/81.0.4044.138 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 81.0.4044.138
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: KY
+    model: Qua Phone QZ
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; VNS-L22 Build/XXXXVNS-L22; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/83.0.4103.83
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    short_name: CV
+    version: 83.0.4103.83
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: HU
+    model: P9 Lite
+  os_family: Android
+  browser_family: Chrome
+
