--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5717,7 +5717,7 @@ Huawei:
       model: 'P8 Lite (2017)'
     - regex: 'EVA-(?:AL[10]0|L[012]9|[TCD]L00)[);/ ]'
       model: 'P9'
-    - regex: 'VNS-L(?:[23]1|62)[);/ ]'
+    - regex: 'VNS-L(?:[23]1|[26]2)[);/ ]'
       model: 'P9 Lite'
     - regex: 'SLA-L(?:02|03|22|23)[);/ ]'
       model: 'P9 Lite Mini'
@@ -6889,7 +6889,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-5]|KYF31|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[125]|KYV47-u|X3-KC)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-5]|KYF31|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[1245]|KYV47-u|X3-KC)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -6939,6 +6939,8 @@ Kyocera:
       model: 'Basio 4'
     - regex: 'KYV42[;/) ]'
       model: 'Qua Phone QX'
+    - regex: 'KYV44[;/) ]'
+      model: 'Qua Phone QZ'
     - regex: 'KYV40U[;/) ]'
       model: 'Rafre'
     - regex: 'KYV33[;/) ]'
@@ -9936,7 +9938,7 @@ Siemens:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CH]|04E|01F)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-3]|SCV3[1-9]|404SC|SCL22'
+  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CHMK]|03[JLK]|04[EL]|52A|01[FGLK])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-3]|SCV3[1-9]|404SC|SCL22'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -10388,15 +10390,15 @@ Samsung:
       model: 'GALAXY S8'
     - regex: '(?:SAMSUNG-)?SM-G892[AU]'
       model: 'GALAXY S8 Active'
-    - regex: '(?:SAMSUNG-)?SM-G955[AFKLNPRTUVW0]|SCV35'
+    - regex: '(?:SAMSUNG-)?SM-G955[AFKLNPRTUVW0]|SCV35|SC-03J'
       model: 'GALAXY S8+'
-    - regex: '(?:SAMSUNG-)?SM-G960[FNUWX0]|SCV38'
+    - regex: '(?:SAMSUNG-)?SM-G960[FNUWX0]|SCV38|SC-02K'
       model: 'GALAXY S9'
-    - regex: '(?:SAMSUNG-)?SM-G965[FNUWX0]|SCV39'
+    - regex: '(?:SAMSUNG-)?SM-G965[FNUWX0]|SCV39|SC-03K'
       model: 'GALAXY S9+'
-    - regex: '(?:SAMSUNG-)?(?:SM-(?:G973|G977N)|SCV41)'
+    - regex: '(?:SAMSUNG-)?(?:SM-(?:G973|G977N)|SCV41|SC-03L)'
       model: 'GALAXY S10'
-    - regex: '(?:SAMSUNG-)?(?:SM-G975[0FUWN]|SCV42)'
+    - regex: '(?:SAMSUNG-)?(?:SM-G975[0FUWN]|SCV42|SC-04L)'
       model: 'GALAXY S10+'
     - regex: '(?:SAMSUNG-)?SM-G970[08FUNWX][);/ ]'
       model: 'GALAXY S10e'
@@ -10408,7 +10410,7 @@ Samsung:
       model: 'GALAXY S20 Ultra 5G'
     - regex: '(?:SAMSUNG-)?SM-G985F'
       model: 'GALAXY S20+'
-    - regex: '(?:SAMSUNG-)?SM-G986(?:[0BNUW]|U1)'
+    - regex: '(?:SAMSUNG-)?SM-G986(?:[0BNUW]|U1)|SC-52A'
       model: 'GALAXY S20+ 5G'
     - regex: '(?:SAMSUNG-)?SM-F700(?:[0FNUW]|U1)|SCV47'
       model: 'GALAXY Z Flip'
@@ -10480,7 +10482,7 @@ Samsung:
       model: 'GALAXY A10s'
     - regex: '(?:SAMSUNG-)?SM-A115F'
       model: 'GALAXY A11'
-    - regex: '(?:SAMSUNG-)?SM-A205(?:[FGSW]|YN)'
+    - regex: '(?:SAMSUNG-)?SM-A205(?:[FGSW]|YN)|SC-02M'
       model: 'GALAXY A20'
     - regex: '(?:SAMSUNG-)?SM-A217F[);/ ]'
       model: 'GALAXY A21s'
@@ -10681,6 +10683,9 @@ Samsung:
     - regex: '(?:SAMSUNG-)?GT-N7000'
       model: 'GALAXY Note'
       device: 'phablet'
+    - regex: 'SC-01G[);/ ]'
+      model: 'GALAXY Note Edge'
+      device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N935[FSLK][);/ ]'
       model: 'GALAXY Note Fan Edition'
       device: 'phablet'
@@ -10746,10 +10751,10 @@ Samsung:
     - regex: '(?:SAMSUNG-)?(?:SM-N930F|SCV34)'
       model: 'GALAXY Note 7'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?SM-N950|SCV37'
+    - regex: '(?:SAMSUNG[- ])?SM-N950|SCV37|SC-01K'
       model: 'GALAXY Note 8'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?(?:SM-N960|SCV40)'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N960|SCV40|SC-01L)'
       model: 'GALAXY Note 9'
       device: 'phablet'
     - regex: '(?:SAMSUNG[- ])?SM-N970(?:0|8|9|D|F|J|K|L|S|U1|U|W8|X)'
