feat(device) detect brand Samsung models: GALAXY S8 (SC-02J), GALAXY Feel (SC-04J)  GALAXY Note 10+ (SC-01M), GALAXY S6 (SC-05G), GALAXY Active Neo (SC-01H)
feat(device) detect brand Sharp models: Aquos Ever (SH-02J)
feat(device) detect brand Kyocera model: Torque G04 (KYV46)
feat(device) detect brand Oppo model: Reno A (CPH1983)

fix(devices) fixed Samsung model names: GALAXY S6 edge (Edge in uppercase), GALAXY S7 active (Active in uppercase);
fix(devices) renamed galaxy S6 edge (Softbank) for GALAXY S6 Edge

--- a/Tests/fixtures/smartphone-11.yml
+++ b/Tests/fixtures/smartphone-11.yml
@@ -636,7 +636,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -656,7 +656,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -676,7 +676,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -696,7 +696,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -716,7 +716,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -736,7 +736,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -756,7 +756,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -776,7 +776,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -796,7 +796,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -816,7 +816,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -836,7 +836,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge (Softbank)
+    model: GALAXY S6 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -856,7 +856,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -876,7 +876,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -896,7 +896,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -916,7 +916,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -936,7 +936,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -956,7 +956,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -976,7 +976,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -996,7 +996,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -1016,7 +1016,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -1036,7 +1036,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -1056,7 +1056,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -1076,7 +1076,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -1096,7 +1096,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -1116,7 +1116,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S6 edge+
+    model: GALAXY S6 Edge+
   os_family: Android
   browser_family: Chrome
 - 
@@ -1236,7 +1236,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 active
+    model: GALAXY S7 Active
   os_family: Android
   browser_family: Chrome
 - 
@@ -1256,7 +1256,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1276,7 +1276,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1296,7 +1296,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1316,7 +1316,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1336,7 +1336,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1356,7 +1356,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1376,7 +1376,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1396,7 +1396,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1416,7 +1416,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1436,7 +1436,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1456,7 +1456,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1476,7 +1476,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1496,7 +1496,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1516,7 +1516,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
@@ -1536,7 +1536,7 @@
   device:
     type: smartphone
     brand: SA
-    model: GALAXY S7 edge
+    model: GALAXY S7 Edge
   os_family: Android
   browser_family: Chrome
 - 
