--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6889,7 +6889,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-5]|KYF31|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[1245]|KYV47-u|X3-KC)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-5]|KYF31|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[12456]|KYV47-u|X3-KC)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -6935,6 +6935,8 @@ Kyocera:
       model: 'Torque G02'
     - regex: 'KYV41[;/) ]'
       model: 'Torque G03'
+    - regex: 'KYV46[;/) ]'
+      model: 'Torque G04'
     - regex: 'KYV47-u[;/) ]'
       model: 'Basio 4'
     - regex: 'KYV42[;/) ]'
@@ -9407,6 +9409,8 @@ OPPO:
       model: 'R9s Plus'
     - regex: '(?:CPH1917|PCA[MT]00)[);/ ]'
       model: 'Reno'
+    - regex: 'CPH1983[);/ ]'
+      model: 'Reno A'
     - regex: 'PCCM00[);/ ]'
       model: 'Reno 10X'
     - regex: 'CPH1919[);/ ]'
@@ -9938,7 +9942,7 @@ Siemens:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CHMK]|03[JLK]|04[EL]|52A|01[FGLK])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-3]|SCV3[1-9]|404SC|SCL22'
+  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CHMKJ]|03[JLK]|04[ELJ]|05G|52A|01[HFGLKM])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-3]|SCV3[1-9]|404SC|SCL22'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -10204,6 +10208,8 @@ Samsung:
       model: 'Omnia II'
     - regex: '(?:SAMSUNG-)?(?:GT-I8150|SM-T255S)'
       model: 'GALAXY W'
+    - regex: 'SC-01H[);/ ]'
+      model: 'GALAXY Active Neo'
     - regex: '(?:SAMSUNG-)?GT-S5830'
       model: 'GALAXY Ace'
     - regex: '(?:SAMSUNG-)?SM-(?:G357FZ|G310HN)'
@@ -10296,6 +10302,8 @@ Samsung:
       model: 'GALAXY FAME Lite with NFC'
     - regex: '(?:SAMSUNG-)?GT-S6810'
       model: 'GALAXY FAME'
+    - regex: 'SC-04J[);/ ]'
+      model: 'GALAXY Feel'
     - regex: '(?:SAMSUNG-)?GT-S7275'
       model: 'GALAXY ACE 3'
     - regex: '(?:SAMSUNG-)?GT-S7500'
@@ -10370,23 +10378,21 @@ Samsung:
       model: 'GALAXY S5 Neo'
     - regex: '(?:SAMSUNG-)?SM-G860P'
       model: 'GALAXY S5 K Sport'
-    - regex: '(?:SAMSUNG-)?SM-G920(?:F[DQ]|W8|[089AFIKLPRSTVX])?'
+    - regex: '(?:SAMSUNG-)?SM-G920(?:F[DQ]|W8|[089AFIKLPRSTVX])?|SC-05G'
       model: 'GALAXY S6'
     - regex: '(?:SAMSUNG-)?SM-G890A'
       model: 'GALAXY S5 Active'
-    - regex: '404SC'
-      model: 'GALAXY S6 edge (Softbank)'
-    - regex: '(?:SAMSUNG-)?SM-G925[0ADFIKLPRSTVW]|SCV31'
-      model: 'GALAXY S6 edge'
+    - regex: '(?:SAMSUNG-)?SM-G925[0ADFIKLPRSTVW]|SCV31|404SC'
+      model: 'GALAXY S6 Edge'
     - regex: '(?:SAMSUNG-)?SM-G928(?:7C|R4|W8|[07ACFGIKLPSTV])'
-      model: 'GALAXY S6 edge+'
+      model: 'GALAXY S6 Edge+'
     - regex: '(?:SAMSUNG-)?SM-G930(?:FD|W8|[0AFKLPRSTUVX])'
       model: 'GALAXY S7'
     - regex: '(?:SAMSUNG-)?SM-G935(?:R4|W8|[0AFKLPSTUVX])|SC-02H|SCV33'
-      model: 'GALAXY S7 edge'
+      model: 'GALAXY S7 Edge'
     - regex: '(?:SAMSUNG-)?SM-G891A'
-      model: 'GALAXY S7 active'
-    - regex: '(?:SAMSUNG-)?SM-G950[08FNUW]?|SCV36'
+      model: 'GALAXY S7 Active'
+    - regex: '(?:SAMSUNG-)?SM-G950[08FNUW]?|SCV36|SC-02J'
       model: 'GALAXY S8'
     - regex: '(?:SAMSUNG-)?SM-G892[AU]'
       model: 'GALAXY S8 Active'
@@ -10760,7 +10766,7 @@ Samsung:
     - regex: '(?:SAMSUNG[- ])?SM-N970(?:0|8|9|D|F|J|K|L|S|U1|U|W8|X)'
       model: 'GALAXY Note 10'
       device: 'phablet'
-    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:0|F|U|U1|W|X|Xu)|SM-N976[BV])'
+    - regex: '(?:SAMSUNG[- ])?(?:SM-N975(?:0|F|U|U1|W|X|Xu)|SM-N976[BV]|SC-01M)'
       model: 'GALAXY Note 10+'
       device: 'phablet'
 
@@ -11511,6 +11517,8 @@ Sharp:
       model: 'Aquos R2'
     - regex: 'SH-C02[);/ ]'
       model: 'Aquos V'
+    - regex: 'SH-02J[);/ ]'
+      model: 'Aquos Ever'
     - regex: '305SH[);/ ]'
       model: 'Aquos Crystal'
     - regex: '402SH[);/ ]'
