feat(device) detect brand LG models: Phoenix (LG-P505R), V60 (L-51A) feat(device) detect brand Oppo model: A9 (2020) (CPH1941) feat(device) detect brand Kyocera models: Urbano V03 (KYV38), One S6 (S6-KC) feat(device) detect brand Sony models: Xperia 1 (802SO) feat(device) detect brand Huawei models: D Tab Compact (d-02H, d-02K), Nova 2 Lite (704HW) feat(device) detect brand Panasonic model: Eluga Live 10.1" (P-08D)
feat(device) detect brand Sharp models: Aquos Ever (SH-04G), Aquos S3 (SHV45),
 Aquos Phone Zeta (SH-01G, SH-01H, SH-04H), Aquos R3 (SH-04L), Aquos R2 (SH-03K),
 Aquos S2 (SH-01K), Aquos Xx2 (502SH), Aquos L2 (SH-L02), Aquos R (SH-03J),
 Aquos Compact (SH-02H), Basio 2 (SHV36), One S5 (S5-SH)

feat(device) detect brand Samsung model: GALAXY S20 5G (SCG01), GALAXY A20 (SCV46)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4224,7 +4224,7 @@ Sony:
       model: 'Xperia 10'
     - regex: '(?:Sony(?:Ericsson)?)?I(?:42[19]3|3223)'
       model: 'Xperia 10 Plus'
-    - regex: '(?:Sony(?:Ericsson)?)?(?:J(?:9110|81[17]0)|SOV40|SO-03L)'
+    - regex: '(?:Sony(?:Ericsson)?)?(?:J(?:9110|81[17]0)|SOV40|SO-03L|802SO)'
       model: 'Xperia 1'
     - regex: '(?:Sony(?:Ericsson)?)?LT22i'
       model: 'Xperia P'
@@ -5332,7 +5332,7 @@ Hoozo:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a?|TAH-AN00m|C8817D|T1-821W|d-01J'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a?|TAH-AN00m|C8817D|T1-821W|d-01J|d-02[HK]'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a[);/ ]'
@@ -5633,6 +5633,8 @@ Huawei:
       model: 'Nova'
     - regex: '(?:PIC-(?:[AT]L00|LX9)|HWV31)[);/ ]'
       model: 'Nova 2'
+    - regex: '704HW[);/ ]'
+      model: 'Nova 2 Lite'
     - regex: 'BAC-(?:L01|TL00)[);/ ]'
       model: 'Nova 2 Plus'
     - regex: 'BAC-(?:AL00|L2[12])[);/ ]'
@@ -5903,7 +5905,7 @@ Huawei:
     - regex: 'BZT-(W09|AL[01]0)[);/ ]'
       device: 'tablet'
       model: 'MediaPad C5 10.1'
-    - regex: 'd-01J[);/ ]'
+    - regex: '(?:d-01J|d-02[HK])[);/ ]'
       device: 'tablet'
       model: 'D Tab Compact'
 
@@ -6889,21 +6891,23 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-5]|KYF31|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[12456]|KYV47-u|X3-KC)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV31|KYV3[3-58]|KYF31|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[12456]|KYV47-u|X3-KC|S6-KC)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
-    - regex: 'C5120'
+    - regex: 'C5120[;/) ]'
       model: 'Milano'
-    - regex: 'S4-KC'
+    - regex: 'S4-KC[;/) ]'
       model: 'One S4'
-    - regex: 'C5155'
+    - regex: 'S6-KC[;/) ]'
+      model: 'One S6'
+    - regex: 'C5155[;/) ]'
       model: 'Rise'
     - regex: '602KC[;/) ]'
       model: 'Digno G'
-    - regex: 'C5170'
+    - regex: 'C5170[;/) ]'
       model: 'Hydro'
-    - regex: 'C5215'
+    - regex: 'C5215[;/) ]'
       model: 'Hydro EDGE'
     - regex: 'C6522N?'
       model: 'Hydro XTRM'
@@ -6957,7 +6961,7 @@ Kyocera:
       model: 'Urbano V01'
     - regex: 'KYV34[;/) ]'
       model: 'Urbano V02'
-    - regex: 'KYV45[;/) ]'
+    - regex: 'KYV(?:45|38)[;/) ]'
       model: 'Urbano V03'
     - regex: '(?:Kyocera-)?E6790'
       model: 'DuraForce XD'
@@ -7487,7 +7491,7 @@ Lexibook:
 
 # LG
 LG:
-  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-03K|L-01[LK]'
+  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[056]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG|L-03K|L-01[LK]|L-51A'
   device: 'smartphone'
   models:
     - regex: 'LG-D325'
@@ -7496,6 +7500,8 @@ LG:
       model: 'L70 Tri'
     - regex: 'LM-X210APM'
       model: 'Phoenix 4'
+    - regex: 'LG-P505R'
+      model: 'Phoenix'
     - regex: 'LM-X210VPP'
       model: 'Zone 4'
     - regex: 'LM-X220PM'
@@ -7540,6 +7546,8 @@ LG:
       model: 'Risio 2'
     - regex: '(?:LG-)?P500H'
       model: 'Optimus One'
+    - regex: 'LG-L160L'
+      model: 'Optimus LTE 2'
     - regex: 'P713'
       model: 'Optimus L7II'
     - regex: 'L-01D'
@@ -7642,8 +7650,10 @@ LG:
       model: 'V20'
     - regex: 'VS996'
       model: 'V30'
-    - regex: 'L-01K'
+    - regex: 'L-01K[);/ ]'
       model: 'V30 Plus'
+    - regex: 'L-51A[);/ ]'
+      model: 'V60'
     - regex: '(?:LG-)?VS410PP'
       model: 'Optimus Zone'
     - regex: 'LM-V350[N]?'
@@ -9285,7 +9295,7 @@ OPPO:
       model: 'A83 (2018)'
     - regex: 'PCA[TM]10[);/ ]'
       model: 'A9'
-    - regex: '(CPH1937|PCHM30)[);/ ]'
+    - regex: '(CPH1937|CPH1941|PCHM30)[);/ ]'
       model: 'A9 (2020)'
     - regex: '(?:OPPO[ _]?)?CPH1938[);/ ]'
       model: 'A9 (EN)'
@@ -9580,7 +9590,7 @@ Panacom:
 
 # panasonic
 Panasonic:
-  regex: 'Panasonic|PANATV[0-9]+|Viera/|P902i[);/ ]|Eluga[ _]|FZ-N1|P55 Novo 4G|DMC-CM1'
+  regex: 'Panasonic|PANATV[0-9]+|Viera/|(?:P902i|P-08D)[);/ ]|Eluga[ _]|FZ-N1|P55 Novo 4G|DMC-CM1'
   device: 'smartphone'
   models:
     - regex: 'Eluga[ _-]([^;/]+) Build'
@@ -9607,6 +9617,10 @@ Panasonic:
       model: '$1'
     - regex: 'portalmmm/2.0 (P[a-z0-9]+)'
       model: '$1'
+
+    - regex: 'P-08D[);/ ]'
+      model: 'Eluga Live 10.1"'
+      device: 'tablet'
 
 # PCBOX
 PCBOX:
@@ -9942,7 +9956,7 @@ Siemens:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CHMKJ]|03[JLK]|04[ELJ]|05G|52A|01[HFGLKM])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-3]|SCV3[1-9]|404SC|SCL22'
+  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CHMKJ]|03[JLK]|04[ELJ]|05G|52A|01[HFGLKM])|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[0-36]|SCV3[1-9]|404SC|SCL22|SCG01'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -10410,7 +10424,7 @@ Samsung:
       model: 'GALAXY S10e'
     - regex: '(?:SAMSUNG-)?SM-G980F'
       model: 'GALAXY S20'
-    - regex: '(?:SAMSUNG-)?SM-G981(?:[0BNUW]|U1)'
+    - regex: '(?:SAMSUNG-)?SM-G981(?:[0BNUW]|U1)|SCG01'
       model: 'GALAXY S20 5G'
     - regex: '(?:SAMSUNG-)?SM-G988(?:[0BNUW]|U1)'
       model: 'GALAXY S20 Ultra 5G'
@@ -10488,7 +10502,7 @@ Samsung:
       model: 'GALAXY A10s'
     - regex: '(?:SAMSUNG-)?SM-A115F'
       model: 'GALAXY A11'
-    - regex: '(?:SAMSUNG-)?SM-A205(?:[FGSW]|YN)|SC-02M'
+    - regex: '(?:SAMSUNG-)?SM-A205(?:[FGSW]|YN)|SC-02M|SCV46'
       model: 'GALAXY A20'
     - regex: '(?:SAMSUNG-)?SM-A217F[);/ ]'
       model: 'GALAXY A21s'
@@ -11487,38 +11501,46 @@ Spice:
     - regex: 'Spice[ _\-]?([^/;]+)(?:/|$)'
       model: '$1'
 
-# Sharp
+# Sharp (jp.sharp)
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|402SH|[36]05SH|70[126]SH|80[18]SH|901SH|506SH|SHL22|SHV4[023467]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S[35]-SH|SH-Z(10|01)|SH-[CL]02|[45]02SH|[36]05SH|70[126]SH|80[18]SH|901SH|506SH|SHL22|SHV4[023-7]|SHV3[568]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
     - regex: '506SH[);/ ]'
       model: 'Aquos Xx3'
+    - regex: '502SH[);/ ]'
+      model: 'Aquos Xx2'
     - regex: 'S3-SH[);/ ]'
       model: 'One S3'
+    - regex: 'S5-SH[);/ ]'
+      model: 'One S5'
     - regex: 'SH-M05[);/ ]'
       model: 'Aquos Sense Lite'
     - regex: '(?:SH-Z10|801SH)[);/ ]'
       model: 'Aquos zero'
     - regex: 'SH-Z01[);/ ]'
       model: 'Aquos S2 (C10)'
-    - regex: 'SH-02E[);/ ]'
+    - regex: '(?:SH-02E|SH-01[GH]|SH-04H)[);/ ]'
       model: 'Aquos Phone Zeta'
     - regex: 'SH06D[);/ ]'
       model: 'Aquos Phone SH-06D'
     - regex: 'SHL22[);/ ]'
       model: 'Aquos Phone SHL22'
-    - regex: '605SH[);/ ]'
+    - regex: 'SH-L02[);/ ]'
+      model: 'Aquos L2'
+    - regex: '(?:605SH|SH-03J)[);/ ]'
       model: 'Aquos R'
     - regex: '701SH[);/ ]'
       model: 'Aquos R Compact'
-    - regex: '(?:SH-M09|SHV42|706SH)[);/ ]'
+    - regex: '(?:SH-M09|SHV42|706SH|SH-03K)[);/ ]'
       model: 'Aquos R2'
     - regex: 'SH-C02[);/ ]'
       model: 'Aquos V'
-    - regex: 'SH-02J[);/ ]'
+    - regex: '(?:SH-02J|SH-04G)[);/ ]'
       model: 'Aquos Ever'
+    - regex: 'SH-02H[);/ ]'
+      model: 'Aquos Compact'
     - regex: '305SH[);/ ]'
       model: 'Aquos Crystal'
     - regex: '402SH[);/ ]'
@@ -11529,13 +11551,13 @@ Sharp:
       model: 'Aquos S Basic'
     - regex: 'SHV38[);/ ]'
       model: 'Aquos S Mini'
-    - regex: '(?:FS8010|SH-M08|SHV43)[);/ ]'
+    - regex: '(?:FS8010|SH-M08|SHV43|SH-01K)[);/ ]'
       model: 'Aquos S2'
     - regex: 'SHV46[);/ ]'
       model: 'Aquos S3 Plus'
-    - regex: '(?:SHV44|808SH)[);/ ]'
+    - regex: '(?:SHV44|808SH|SH-04L)[);/ ]'
       model: 'Aquos R3'
-    - regex: '(?:FS8032|SH-02M)[);/ ]'
+    - regex: '(?:FS8032|SH-02M|SHV45)[);/ ]'
       model: 'Aquos S3'
     - regex: 'FS8018[);/ ]'
       model: 'Aquos S3 Mini'
@@ -11551,6 +11573,8 @@ Sharp:
       model: 'Z3'
     - regex: 'FS8028[);/ ]'
       model: 'R1S'
+    - regex: 'SHV36[);/ ]'
+      model: 'Basio 2'
 
     # explicit tablet models
     - regex: 'SH-08E[);/ ]'
