--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -5999,4 +5999,23 @@
     model: Aquos Phone Zeta
   os_family: Android
   browser_family: Chrome
-
+-
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 8.1.0; 705-G Go Build/OPM2.171019.012)
+  os:
+    name: Android
+    short_name: AND
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    short_name: AN
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: HW
+    model: HT-705-G Go
+  os_family: Android
+  browser_family: Android Browser
